--- a/package.json
+++ b/package.json
@@ -1,107 +1,44 @@
 {
-  "name": "@zhangmmm/iview-tree-transfer",
+  "name": "iview-tree-transfer",
   "version": "1.0.0",
-  "description": "基于 iview 组件库实现的穿梭框，支持 tree 组件",
-  "author": "qianzm2490@vip.qq.com",
-  "license": "MIT",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "webpack-dev-server --open",
+    "build": "webpack --mode production",
+    "compile": "npx babel src --out-dir lib"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/zhangminggeek/iview-tree-transfer.git"
   },
-  "keywords": [
-    "vue",
-    "iview",
-    "tree",
-    "transfer"
-  ],
-  "files": [
-    "src",
-    "dist"
-  ],
-  "main": "dist/iview-tree-transfer.umd.js",
-  "module": "dist/iview-tree-transfer.esm.js",
-  "unpkg": "dist/iview-tree-transfer.min.js",
-  "browser": {
-    "./sfc": "src/iview-tree-transfer.vue"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/zhangminggeek/iview-tree-transfer/issues"
   },
-  "scripts": {
-    "dev": "vue-styleguidist server",
-    "test": "jest --verbose",
-    "doc": "vue-styleguidist build",
-    "build": "npm run build:unpkg & npm run build:es & npm run build:umd & npm run doc",
-    "build:umd": "rollup --config build/rollup.config.js --format umd --file dist/iview-tree-transfer.umd.js",
-    "build:es": "rollup --config build/rollup.config.js --format es --file dist/iview-tree-transfer.esm.js",
-    "build:unpkg": "rollup --config build/rollup.config.js --format iife --file dist/iview-tree-transfer.min.js",
-    "stdver": "standard-version -m '[skip ci] chore(release): v%s'",
-    "release": "gren release --override"
+  "homepage": "https://github.com/zhangminggeek/iview-tree-transfer#readme",
+  "dependencies": {
+    "vue": "^2.6.11"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@femessage/github-release-notes": "^0.19.0",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.5",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^7.0.0-alpha.1",
-    "file-loader": "^3.0.1",
-    "glob": "^7.1.3",
-    "husky": "1.3.1",
-    "jest": "^24.8.0",
-    "less": "^3.9.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "autoprefixer": "^9.7.4",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^3.2.0",
+    "less": "^3.11.1",
     "less-loader": "^5.0.0",
-    "lint-staged": "^8.1.0",
-    "minimist": "^1.2.0",
-    "prettier": "1.18.2",
-    "rollup": "^1.9.0",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-vue": "^4.7.2",
-    "standard-version": "^6.0.1",
-    "stylelint": "^9.10.1",
-    "stylelint-config-standard": "^18.3.0",
-    "vue": "^2.6.10",
-    "vue-loader": "^15.7.1",
-    "vue-styleguidist": "^3.16.3",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.29.6"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "vue-sfc-cli": "1.11.2",
-  "engines": {
-    "node": ">= 8.3.0",
-    "npm": ">= 3.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "post-commit": "git update-index --again",
-      "pre-push": "yarn test"
-    }
-  },
-  "lint-staged": {
-    "*.@(md|json)": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.js": [
-      "eslint --fix",
-      "prettier --write",
-      "git add"
-    ],
-    "*.vue": [
-      "eslint --fix",
-      "prettier --write",
-      "stylelint --fix",
-      "git add"
-    ]
-  },
-  "gren": "@femessage/grenrc"
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^1.1.3",
+    "vue-loader": "^15.9.1",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  }
 }
