--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["@babel/preset-env"]
+  "presets": ["@babel/preset-env"],
+  "plugins": [
+    [
+      "import",
+      {
+        "libraryName": "view-design",
+        "libraryDirectory": "src/components"
+      }
+    ]
+  ]
 }
