--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/zhangminggeek/iview-tree-transfer#readme",
   "dependencies": {
+    "view-design": "^4.2.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
@@ -28,13 +29,16 @@
     "@babel/preset-env": "^7.8.7",
     "autoprefixer": "^9.7.4",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^1.1.3",
+    "url-loader": "^4.1.0",
     "vue-loader": "^15.9.1",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.0",
