--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iview-tree-transfer",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/zhangminggeek/iview-tree-transfer#readme",
   "dependencies": {
+    "lodash.clonedeep": "^4.5.0",
     "view-design": "^4.2.0",
     "vue": "^2.6.11"
   },
@@ -44,5 +45,11 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "Firefox ESR",
+    "> 1%",
+    "ie >= 10"
+  ]
 }
